# kitfucoda-intro2

./: pyproject.toml
src/framework/: actor.py  common.py  core.py  display.py  event.py  game.py
src/kitfucoda_intro2/: __init__.py  animation.py  animation2.py  core.py
